@@ -1,5 +1,10 @@
 2007-10-17  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-property-browser.c:
+	Replace some gnome-vfs code with gio code
+
+2007-10-17  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-properties-window.c:
 	Replace some gnome-vfs code with gio code
 
